--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "tslib": "^2.5.0",
     "typescript": "^5.0.2",
     "vite": "^4.3.2"
+  },
+  "dependencies": {
+    "thin-backend": "^0.12.1"
   }
 }
