added support for prostgresql database instead, actually works

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@vercel/edge-config": "^0.1.10",
+    "@vercel/postgres": "^0.2.1",
     "thin-backend": "^0.12.1"
   }
 }
